# aumos-shadow-ai-toolkit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_shadow_ai_toolkit/: __init__.py  main.py  settings.py
src/aumos_shadow_ai_toolkit/adapters/: __init__.py  compliance_checker.py  cost_estimator.py  identity_resolver.py  kafka.py  network_scanner.py  report_generator.py  repositories.py  risk_scorer.py  shadow_repositories.py  usage_analytics.py
src/aumos_shadow_ai_toolkit/api/: __init__.py  extension_router.py  proxy_router.py  router.py  schemas.py  schemas_shadow.py
src/aumos_shadow_ai_toolkit/api/routes/: __init__.py  shadow_ai.py
src/aumos_shadow_ai_toolkit/core/: __init__.py  extension_services.py  interfaces.py  models.py  providers.py  services.py
src/aumos_shadow_ai_toolkit/core/models/: __init__.py  shadow_detection.py
src/aumos_shadow_ai_toolkit/core/services/: __init__.py  amnesty_service.py  detection_service.py  migration_service.py
tests/: __init__.py  conftest.py  test_services.py
tests/integration/: __init__.py  test_shadow_api.py
tests/unit/: __init__.py  test_amnesty_service.py  test_detection_service.py  test_migration_service.py  test_providers.py
